--- a/index.html
+++ b/index.html
@@ -47,9 +47,18 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Your name</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="https://weeek6-weather-project.netlify.app/" target="_blank"
+          <a href="https://github.com/Lydia-ma-sketch" target="_blank">Lydia</a>
+          and is
+          <a
+            href="https://github.com/Lydia-ma-sketch/week6-weather-project"
+            target="_blank"
+          >
+            on GitHub</a
+          >
+          and
+          <a
+            href="https://week6-weather-app-project.netlify.app/"
+            target="_blank"
             >hosted on Netlify</a
           >
         </p>
